maj makefile apres trucs du futurs

--- a/common/Makefile
+++ b/common/Makefile
@@ -172,6 +172,7 @@ dist:
 clean:compiler_clean 
 	-$(DEL_FILE) $(OBJECTS)
 	-$(DEL_FILE) *~ core *.core
+	-$(DEL_FILE) $(TARGET) 
 
 
 ####### Sub-libraries
